# Hammer

./: .gitignore  CLAUDE.md  README.md  cabal.project  cabal.project.freeze  flake.nix  hammer.cabal
profile/: Benchmark.hs  Main.hs  TableGen.hs  TestGrainFinder.hs
src/Hammer/: Graph.hs  MicroGraph.hs  VTK.hs  VoxBox.hs  VoxConn.hs
src/Hammer/Graph/: Graph.hs  RandomWalk.hs  Sparse.hs
src/Hammer/Math/: Algebra.hs  AlgebraBase.hs  AlgebraMat.hs  AlgebraVec.hs  Array.hs  GramSchmidt.hs  GroupGraph.hs  MatrixTools.hs  Optimum.hs  Quartenions.hs  Quaternions.hs  SortSeq.hs  SparseMatrix.hs  SphereProjection.hs  Unboxed.hs  Vector.hs
src/Hammer/MicroGraph/: Base.hs  GrainGraphBuilder.hs  GrainGraphReader.hs  GrainsGraph.hs  Graph.hs  GraphBuilder.hs  Types.hs
src/Hammer/Parallel/: Vector.hs
src/Hammer/Parser/: ANGReader.hs
src/Hammer/Render/: VoxBoxVTK.hs
src/Hammer/Render/VTK/: Base.hs  Types.hs  VTKRender.hs  VTKXMLTemplate.hs
src/Hammer/VTK/: Types.hs  VTKXMLTemplate.hs  VoxBox.hs
src/Hammer/VoxBox/: Base.hs  GrainFinder.hs  MicroVoxel.hs  Render.hs  Types.hs  VoxConnFinder.hs  VoxConnTypes.hs
src/Hammer/VoxConn/: Types.hs
test/: ArraySpec.hs  ArrayTest.hs  MicroGraphSpec.hs  OptimumSpec.hs  OptimumTest.hs  SortSeqSpec.hs  SparseMatrixSpec.hs  TypesSpec.hs  TypesTest.hs  VTKSpec.hs  VoxBoxSpec.hs  VoxConnSpec.hs
