name:           hammer
version:        0.4.0
cabal-version:  >= 1.8
build-type:     Simple
license:        BSD3
license-file:   LICENSE
copyright:      (c) 2008-2011 Balazs Komuves (c) 2011 Edgar Gomes
author:         Edgar Gomes de Araujo <talktoedgar at gmail dot com>
maintainer:     Edgar Gomes de Araujo <talktoedgar at gmail dot com>
stability:      experimental
synopsis:       Basic tools for microstructure in polycrystal materials
description: Library with tools for metalurgical research. Includes:
 - Vector and matrix operations
 - Group conected components using graphs
category:       Math

Flag test
    Description:        Build the exectable using command line.
    Default:            False

Executable hammer-benchmark
    main-is:           Benchmark.hs
    if flag(test)
       build-depends:  hammer
                     , base                 == 4.*
                     , vector               >= 0.10
                     , random               >= 1.0
                     , tf-random            >= 0.5
                     , unordered-containers >= 0.2
                     , containers           >= 0.4
                     , deepseq              >= 1.3
                     , criterion            >= 0.6

       hs-source-dirs: profile

       ghc-options:
                       -Wall
                       -O2
                       -rtsopts
                       -funbox-strict-fields
                       -fprof-auto
                       -threaded
                       -- -eventlog
                       -auto-all
                       -caf-all

       Buildable:      True
    else
       Buildable:      False

Executable hammer-profile
    main-is:           Main.hs
    if flag(test)
       build-depends:  optparse-applicative >= 0.5
                     , hammer
                     , base                 == 4.*
                     , vector               >= 0.10
                     , QuickCheck           >= 2.5

       hs-source-dirs: profile

       ghc-options:
                       -Wall
                       -O2
                       -rtsopts
                       -funbox-strict-fields
                       -threaded
                       -- -eventlog
                       -auto-all
                       -caf-all

       Buildable:      True
    else
       Buildable:      False

Library
  build-depends:  base                    == 4.*
                , containers              >= 0.4.2.1
                , unordered-containers    >= 0.2
                , hashable                >= 1.2
                , text                    >= 0.11
                , bytestring              >= 0.10
                , vector                  >= 0.10
                , vector-algorithms       >= 0.5
                , vector-th-unbox         >= 0.2.1
                , binary                  >= 0.7
                , primitive               >= 0.5
                , random                  >= 1.0
                , parallel                >= 3.0
                , deepseq                 >= 1.2
                , xmlgen                  >= 0.6
                , blaze-builder           >= 0.3
                , base64-bytestring       >= 1.0
                , mcl                     == 0.1
                , vtk                     == 0.1.0
                , linear-vect

  exposed-modules:  Hammer.Math.Array
                    Hammer.Math.SortSeq
                    Hammer.Math.SparseMatrix
                    Hammer.Math.Optimum

                    Hammer.Graph

                    Hammer.MicroGraph

                    Hammer.VoxBox
                    Hammer.VoxConn

                    Hammer.VTK

  other-modules:    Hammer.MicroGraph.Types
                    Hammer.MicroGraph.Base
                    Hammer.MicroGraph.GraphBuilder

                    Hammer.VoxConn.Types
                    Hammer.VoxBox.Types

  exposed:        True
  buildable:      True
  hs-source-dirs: src
  ghc-options:    -O2
                  -rtsopts
                  -Wall
                  -funbox-strict-fields
                  -threaded
                  -fprof-auto
                  -- -eventlog
                  -auto-all
                  -caf-all
