name:          hammer
version:       0.4.0
cabal-version: >=1.8
build-type:    Simple
license:       BSD3
license-file:  LICENSE
copyright:     (c) 2008-2011 Balazs Komuves (c) 2011 Edgar Gomes
author:        Edgar Gomes de Araujo <talktoedgar at gmail dot com>
maintainer:    Edgar Gomes de Araujo <talktoedgar at gmail dot com>
stability:     experimental
synopsis:      Basic tools for microstructure in polycrystal materials
description:
  Library with tools for metalurgical research. Includes:
  - Vector and matrix operations
  - Group conected components using graphs

category:      Math

flag test
  description: Build the exectable using command line.
  default:     False

executable hammer-benchmark
  main-is: Benchmark.hs

  if flag(test)
    build-depends:
        base                  >=4    && <5
      , containers            >=0.4
      , criterion             >=0.6
      , deepseq               >=1.3
      , hammer
      , random                >=1.0
      , tf-random             >=0.5
      , unordered-containers  >=0.2
      , vector                >=0.10

    hs-source-dirs: profile
    ghc-options:
      -Wall -O2 -rtsopts -funbox-strict-fields -fprof-auto -threaded
      -auto-all -caf-all

    -- -eventlog
    buildable:      True

  else
    buildable: False

executable hammer-profile
  main-is: Main.hs

  if flag(test)
    build-depends:
        base                  >=4    && <5
      , hammer
      , optparse-applicative  >=0.5
      , QuickCheck            >=2.5
      , vector                >=0.10

    hs-source-dirs: profile
    ghc-options:
      -Wall -O2 -rtsopts -funbox-strict-fields -threaded -auto-all
      -caf-all

    -- -eventlog
    buildable:      True

  else
    buildable: False

library
  build-depends:
      base                  >=4       && <5
    , base64-bytestring     >=1.0
    , binary                >=0.7
    , blaze-builder         >=0.3
    , bytestring            >=0.10
    , containers            >=0.4.2.1
    , deepseq               >=1.2
    , hashable              >=1.2
    , linear-vect
    , mcl                   ==0.1
    , parallel              >=3.0
    , primitive             >=0.5
    , random                >=1.0
    , text                  >=0.11
    , unordered-containers  >=0.2
    , vector                >=0.10
    , vector-algorithms     >=0.5
    , vector-th-unbox       >=0.2.1
    , vtk                   ==0.1.0
    , xmlgen                >=0.6

  exposed-modules:
    Hammer.Graph
    Hammer.Math.Array
    Hammer.Math.Optimum
    Hammer.Math.SortSeq
    Hammer.Math.SparseMatrix
    Hammer.MicroGraph
    Hammer.VoxBox
    Hammer.VoxConn
    Hammer.VTK

  other-modules:
    Hammer.MicroGraph.Base
    Hammer.MicroGraph.GraphBuilder
    Hammer.MicroGraph.Types
    Hammer.VoxBox.Types
    Hammer.VoxConn.Types

  exposed:         True
  buildable:       True
  hs-source-dirs:  src
  ghc-options:
    -O2 -rtsopts -Wall -funbox-strict-fields -threaded -fprof-auto
    -auto-all -caf-all

-- -eventlog
